--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,11 @@ body{
     color: #434455;
     background-color: #FCFCFC;
 }
+
+ ul{
+    list-style: none;
+
+}
 a{
     text-decoration: none;
 }
