--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,13 @@ body{
     background-color: #FCFCFC;
 }
 
- ul{
+ ul,ol {
     list-style: none;
 
 }
 a{
     text-decoration: none;
+}
+address{
+    font-style: normal;
 }
