--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body{
     font-family: "Roboto",sans-serif;
     color: #434455;
-    background-color: #FCFCFC;
+    background-color: #FFFFFF;
 }
 
  ul,ol {
@@ -25,7 +25,7 @@ address{
         font-family: "Raleway", sans-serif;
         font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
@@ -53,7 +53,7 @@ font-weight: 500;
 }
 .nav-link:hover,
 .nav-link:focus{
-    color: #4d5ae5
+    color: #404bbf;
 }
 .header-contacts{
 
@@ -75,29 +75,35 @@ color: #404BBF
     background-color: #2e2f42;
 }
 .hero-title{
+    font-family: inherit;
 font-weight: 700;
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
-    margin-top: 188px;
-    margin-bottom: 292px;
     color: #fff;
 
 }
 .hero-btn{
-    
+        font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #ffffff;
+        cursor: pointer;
         background: #4d5ae5;
         border-radius: 4px;
-            padding: 16px 32px;
-            width: 169px;
-            height: 56px;
-            text-align: center;
+        padding: 16px 32px;
+        width: 169px;
+        height: 56px;
+        text-align: center;
+            
     
 }
 .hero-btn:hover,
 .hero-btn:focus{
-    #404BBF
+    background-color: #404BBF
 }
 .benefits-subtitle{
     font-weight: 500;
@@ -116,18 +122,21 @@ font-weight: 700;
 .section-title{
     font-weight: 700;
         font-size: 36px;
-        line-height: 1.11111;
+        line-height: 1.11;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        text-transform: capitalize
 }
 
 .team-subtitle{
-    font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11111;
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        background-color: #FFFFFF
 }
 .team-desc{
     font-weight: 400;
@@ -135,6 +144,14 @@ font-weight: 700;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+}
+.foto{
+    background-color: #F4F4FD
+
+}
+.portfolio-title{
+    line-height: 1.11
+    
 }
 .portfolio-subtitle{
     font-weight: 500;
@@ -157,6 +174,7 @@ font-weight: 700;
 }
 .footer-text{
     font-weight: 400;
+    line-height: 1.17
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
