--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ font-weight: 500;
 }
 .header-contacts:hover,
 .header-contacts:focus{
-color: #404bbf
+color: #404bbf;
 }
 .hero{
 
@@ -92,10 +92,8 @@ color: #404bbf
         cursor: pointer;
         background: #4d5ae5;
         border-radius: 4px;
-        padding: 16px 32px;
-        width: 169px;
-        height: 56px;
-        text-align: center;
+    
+        text-align: c
             
     
 }
@@ -118,7 +116,7 @@ color: #404bbf
         color: #434455;
 }
 .section-title{
-    font-weight: 700;
+        font-weight: 700;
         font-size: 36px;
         line-height: 1.11;
         line-height: 1.11;
@@ -126,7 +124,8 @@ color: #404bbf
         text-align: center;
         color: #2e2f42;
         text-transform: capitalize;
-        background-color: #F4F4FD
+        background-color: #F4F4FD;
+
 }
 
 .team-subtitle{
@@ -172,7 +171,7 @@ color: #404bbf
 }
 .footer-text{
     font-weight: 400;
-    line-height: 1.17
+    line-height: 1.17;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
