--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,11 @@ color: #404bbf;
 }
 
 .team-subtitle{
-    
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
         background-color: #FFFFFF;
 }
 .team-desc{
