--- a/css/styles.css
+++ b/css/styles.css
@@ -64,8 +64,8 @@ font-weight: 500;
         letter-spacing: 0.02em;
         color: #434455;
 }
-.header-contacts:hover,
-.header-contacts:focus{
+.contacts-link:hover,
+.contacts-link:focus {
 color: #404bbf;
 }
 .hero{
@@ -137,6 +137,9 @@ color: #404bbf;
         letter-spacing: 0.02em;
         color: #2e2f42;
         background-color: #FFFFFF;
+}
+.team-item{
+    background-color: #FFFFFF
 }
 .team-desc{
         font-weight: 400;
