--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@ body{
 
  ul,ol {
     list-style: none;
+    margin: 0;
+    padding-left: 0;
 
 }
 a{
@@ -14,12 +16,46 @@ a{
 address{
     font-style: normal;
 }
+h1,h2,h3,h4,h5,h6{
+    margin: 0;
 
+}
+img{
+    display: block;
+    max-width: 100%;
+}
+  /*-----------HERO-----------*/
+
+.container{
+    width: 1128px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.header-container{
+    display: flex;
+    align-items: center;
+}
+/*-------HEADER------*/
 .page-header{
 
-    color: #E7E9FC
+    color: #E7E9FC;
+    display: flex;
+    border-bottom: 1px solid #E7E9FC;
 }
-
+.header-nav{
+    display:flex;
+    aligne-items: center;
+}
+.header-list{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+.contacts-list{
+    display: flex;
+    align-items: center;
+}
 .logo{
         font-family: "Raleway", sans-serif;
         font-weight: 700;
@@ -30,11 +66,19 @@ address{
         color: #4d5ae5;
         
 }
+.header-logo{
+    padding: 24px 0;
+    margin-right: 76px;
+}
 .header-logo .logo-part{
-    color: #2E2F42
+    color: #2E2F42;
+
 }
 .footer-logo .logo-part{
     color: #f4f4fd
+}
+.page-header{
+    display: flex;
 }
 .nav-item{
 font-weight: 500;
@@ -42,8 +86,11 @@ font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    
 }
 .nav-link{
+    padding: 24px 0;
+    display: block;
     font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
@@ -55,10 +102,18 @@ font-weight: 500;
     color: #404bbf;
 }
 .header-contacts{
-
+    font-style: normal;
+    margin-left: auto;
+}
+.contacts-list{
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 .contacts-link{
-    font-weight: 400;
+        display: block;
+        padding: 24px 0;
+        font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
@@ -68,11 +123,16 @@ font-weight: 500;
 .contacts-link:focus {
 color: #404bbf;
 }
+
+/*-----HERO-----*/
 .hero{
 
     background-color: #2e2f42;
+    padding: 188px 0;
+    display:block
 }
 .hero-title{
+    width: 496px;
     font-family: inherit;
     font-weight: 700;
     font-size: 56px;
@@ -80,6 +140,10 @@ color: #404bbf;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
+    margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
+    
 
 }
 .hero-btn{
@@ -91,15 +155,49 @@ color: #404bbf;
         color: #ffffff;
         cursor: pointer;
         background: #4d5ae5;
-    
-        text-align: c
-            
+        text-align: center;
+        margin-right: auto;
+        margin-left: auto;
+        display: block;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        border-radius: 4px;
+        border: none;
+        min-width: 169px;
+        height: 56px;
+        text-decoration: none;
     
 }
 .hero-btn:hover,
 .hero-btn:focus{
     background-color: #404BBF
 }
+
+/*-------Benefits----*/
+.visually-hidden{
+    position:absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+.benefits-list{
+    display: flex;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    text-align: left;
+    gap: 24px;
+}
+    .benefits-item{
+        margin-right: 24px;
+        width: 264px;
+    }
 .benefits-subtitle{
     font-weight: 500;
         font-size: 20px;
@@ -114,7 +212,9 @@ color: #404bbf;
         letter-spacing: 0.02em;
         color: #434455;
 }
-.section-title{
+
+/*-------TEAM------*/
+.section-title-team{
         font-weight: 700;
         font-size: 36px;
         line-height: 1.11;
@@ -124,6 +224,8 @@ color: #404bbf;
         color: #2e2f42;
         text-transform: capitalize;
         background-color: #F4F4FD;
+        margin-top: 120px;
+        padding-top: 120px;
 
 }
 .team{
@@ -137,10 +239,25 @@ color: #404bbf;
         letter-spacing: 0.02em;
         color: #2e2f42;
         background-color: #FFFFFF;
+        
+}
+.team-list{
+    display: flex;
+        align-items: center;
+        gap: 24px;
 }
 .team-item{
-    background-color: #FFFFFF
+    background-color: #FFFFFF;
+    width: calc(100%-72px) / 4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 0 0 4px 4px;
+        padding: 0px 0px 32px 0px;
+     margin-bottom: 120px;
 }
+
 .team-desc{
         font-weight: 400;
         font-size: 16px;
@@ -148,9 +265,44 @@ color: #404bbf;
         letter-spacing: 0.02em;
         color: #434455;
 }
+
+/*-------PHOTO-----*/
+.section-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+    background-color: #ffffff
+    margin-top: 120px;
+    padding-top: 120px;
+}
 .foto{
     background-color: #F4F4FD
 
+}
+.portfolio{
+    padding: 120px 0 120px 0;
+}
+.portfolio-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    row-gap: 48px
+    
+}
+.portfolio-item{
+    width: calc((100% - 48px) / 3);
+    display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+        gap: 8px;
+       
+    
 }
 .portfolio-title{
     line-height: 1.11
@@ -170,9 +322,27 @@ color: #404bbf;
         letter-spacing: 0.02em;
         color: #434455;
 }
+.card-desc{
+    display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+        gap: 8px;
+        border-bottom: 1px solid #e7e9fc;
+            border-left: 1px solid #e7e9fc;
+            border-right: 1px solid #e7e9fc;
+            padding: 32px 16px;
+            width: 360px;
+            height: 120px;
+}
+/*----FOOTER----*/
+
 .page-footer{
     
-        background-color: #2e2f42;;
+       
+        background-color: #2e2f42;
+            padding: 100px 0;
+            display: block
 }
 .footer-text{
     font-weight: 400;
@@ -181,6 +351,16 @@ color: #404bbf;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
+        width: 264px;
+            height: 112px;
+}
+.footer-logo{
+    display: inline-block;
+        align-items: center;
+        justify-content: flex-start;
+        flex-direction: row;
+        gap: 0px;
+        margin-bottom: 16px;
 }
 
         
