--- a/css/styles.css
+++ b/css/styles.css
@@ -128,11 +128,11 @@ color: #404bbf;
 .hero{
 
     background-color: #2e2f42;
-    padding: 120px 0;
+    padding: 180px 0;
     display:block
 }
 .hero-title{
-    width: 496px;
+    max-width: 496px;
     font-family: inherit;
     font-weight: 700;
     font-size: 56px;
@@ -197,7 +197,7 @@ color: #404bbf;
     padding-bottom: 120px;
     text-align: left;
     gap: 24px;
-    width: calc(100%-72px) / 4;
+    width: calc((100%-72px) / 4;)
 }
     .benefits-item{
         margin-right: 24px;
