--- a/css/styles.css
+++ b/css/styles.css
@@ -197,12 +197,12 @@ color: #404bbf;
     padding-bottom: 120px;
     text-align: left;
     gap: 24px;
-    width: calc((100%-72px) / 4;)
+    
 }
     .benefits-item{
         margin-right: 24px;
         width: 264px;
-         
+        width: calc((100% - 72px) / 4);
     }
 .benefits-subtitle{
     font-weight: 500;
