--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,9 @@ img{
     display: block;
     max-width: 100%;
 }
+p{
+    margin: 0;
+}
   /*-----------HERO-----------*/
 
 .container{
@@ -193,8 +196,6 @@ color: #404bbf;
 }
 .benefits-list{
     display: flex;
-    padding-top: 120px;
-    padding-bottom: 120px;
     text-align: left;
     gap: 24px;
     
@@ -234,8 +235,6 @@ color: #404bbf;
         color: #2e2f42;
         text-transform: capitalize;
         background-color: #F4F4FD;
-        margin-top: 120px;
-        padding-top: 120px;
         margin-bottom: 72px;
 
 }
@@ -262,13 +261,10 @@ color: #404bbf;
 .team-item{
     background-color: #FFFFFF;
     width: calc(100%-72px) / 4;
-    display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     border-radius: 0 0 4px 4px;
-        padding: 0px 0px 32px 0px;
-     margin-bottom: 120px;
 }
 .card{
     padding: 32px 0;
@@ -293,8 +289,6 @@ color: #404bbf;
     color: #2e2f42;
     text-transform: capitalize;
     background-color: #ffffff;
-    margin-top: 120px;
-    padding-top: 120px;
     margin-bottom: 72px;
  }
 .foto{
@@ -313,7 +307,6 @@ color: #404bbf;
 }
 .portfolio-item{
     width: calc((100% - 48px) / 3);
-    display: flex;
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
@@ -341,7 +334,6 @@ color: #404bbf;
         color: #434455;
 }
 .card-desc{
-    display: flex;
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
@@ -350,8 +342,6 @@ color: #404bbf;
             border-left: 1px solid #e7e9fc;
             border-right: 1px solid #e7e9fc;
             padding: 32px 16px;
-            width: 360px;
-            height: 120px;
 }
 /*----FOOTER----*/
 
@@ -370,7 +360,7 @@ color: #404bbf;
         letter-spacing: 0.02em;
         color: #f4f4fd;
         width: 264px;
-            height: 112px;
+        
 }
 .footer-logo{
     display: inline-block;
