--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,20 @@ font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: #2e2f42;
+        color: #404BBF;
+        position:relative
+        
+}
+.nav-link ::after{
+    content: '';
+    width: 100%;
+    display: block;
+    height: 4px;
+    background-color: #404BBF;
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+        bottom: -2px;
 }
 .nav-link:hover,
 .nav-link:focus{
@@ -131,6 +144,13 @@ color: #404bbf;
 .hero{
 
     background-color: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/hero-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    max-width: 1140px;
+    margin: 0 auto;
     padding: 188px 0;
     display:block
 }
@@ -200,6 +220,19 @@ color: #404bbf;
     gap: 24px;
     
 }
+
+
+.benefit-icon{
+    display: flex;
+    border: 1px solid #8e8f99;
+        border-radius: 4px;
+        width: 264px;
+        height: 112px;
+        background: #f4f4fd;
+        display: flex;
+        align-items: centre;
+        justify-content: center;
+}
     .benefit-item{
         
         width: 264px;
@@ -268,6 +301,17 @@ color: #404bbf;
 }
 .card{
     padding: 32px 0;
+}
+.team-icon{
+display: flex;
+    align-items: center;
+    gap: 24px;
+
+ 
+}
+
+.social-team{
+   display: flex;
 }
 .team-desc{
         font-weight: 400;
