--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,10 @@ p{
     color: #E7E9FC;
     display: flex;
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.8),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 1px 6px rgba(46, 47, 66, 0.8);
+
 }
 .header-nav{
     display:flex;
@@ -111,7 +115,8 @@ font-weight: 500;
     border-radius: 2px;
     position: absolute;
     left: 0;
-        bottom: -2px;
+        bottom: -1px;
+        transition: color 250 ms cubic-bezier(0.4,0,0.2,1)
 }
 .nav-link:hover,
 .nav-link:focus{
@@ -134,6 +139,7 @@ font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+        transition: color 250 ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .contacts-link:hover,
 .contacts-link:focus {
@@ -149,10 +155,11 @@ color: #404bbf;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1140px;
+    max-width: 1440px;
     margin: 0 auto;
     padding: 188px 0;
-    display:block
+    display:block;
+    transition: background-color 250ms cubic-bezier(0.4,0,0,2,1);
 }
 .hero-title{
     max-width: 496px;
@@ -214,6 +221,9 @@ color: #404bbf;
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
+
+   
 .benefits-list{
     display: flex;
     text-align: left;
@@ -298,20 +308,51 @@ color: #404bbf;
     justify-content: center;
     flex-direction: column;
     border-radius: 0 0 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.8),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px rgba(46, 47, 66, 0.8)
 }
 .card{
     padding: 32px 0;
+}
+.social-item{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
 }
 .team-icon{
 display: flex;
     align-items: center;
     gap: 24px;
+}
+.team-item{
+    display: flex;
+    justify-content: center;
+    gap:24px;
+    width: 40px;
+    height: 40px;
 
- 
 }
 
-.social-team{
+.social-team-link{
    display: flex;
+}
+.soc-link{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.soc-link :hover,
+.soc-link :focus{
+    background-color: #404bbf;
+}
+.social-icon{
+    fill: #f4f4fd;
 }
 .team-desc{
         font-weight: 400;
@@ -389,12 +430,56 @@ display: flex;
 }
 /*----FOOTER----*/
 
+.footer-container{
+    display:flex;
+    align-items: baseline;
+
+}
 .page-footer{
     
        
         background-color: #2e2f42;
             padding: 100px 0;
             display: block
+}
+.logo-text{
+    margin-right: 120px;
+}
+.footer-soc{
+
+}
+.footer-media-text{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#FFFFFF;
+    margin-bottom: 16px;
+
+}
+.footer-social-item{
+    display: flex;
+    gap: 16px;
+
+
+}
+.footer-social{
+    width: 40px;
+    height: 40px;
+
+}
+.footer-soc-link{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-soc-link:hover,
+.footer-soc-link:focus{
+background-color: #31d0aa;
 }
 .footer-text{
     font-weight: 400;
@@ -405,6 +490,9 @@ display: flex;
         color: #f4f4fd;
         width: 264px;
         
+}
+.footer-soc-icon{
+    fill: #f4f4fd
 }
 .footer-logo{
     display: inline-block;
