--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,7 @@ display: flex;
         justify-content: center;
         flex-direction: column;
         gap: 8px;
+        
        
     
 }
@@ -427,6 +428,24 @@ display: flex;
             border-left: 1px solid #e7e9fc;
             border-right: 1px solid #e7e9fc;
             padding: 32px 16px;
+
+}
+.portfolio-cover-text{
+    position: absolute;
+    background-color: #4d5ae5;
+    color: #f4f4fd;
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        
+        width: 100%;
+        height: ;
+
+}
+.portfolio-cover-wrapper{
+    position:relative;
 }
 /*----FOOTER----*/
 
@@ -442,10 +461,11 @@ display: flex;
             padding: 100px 0;
             display: block
 }
-.logo-text{
+.footer-logo-text{
     margin-right: 120px;
 }
-.footer-soc{
+.footer-social{
+    background-color: 250ms cubic-bezier(0.4,0,0.2,1)
 
 }
 .footer-media-text{
