--- a/css/styles.css
+++ b/css/styles.css
@@ -103,9 +103,16 @@ font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #404BBF;
-        position:relative
+        position: relative;
         
 }
+.nav-link.current{
+    position: relative
+}
+
+    .nav-link.current{
+        color: #404BBF;
+    }
 .nav-link ::after{
     content: '';
     width: 100%;
@@ -116,7 +123,7 @@ font-weight: 500;
     position: absolute;
     left: 0;
         bottom: -1px;
-        transition: color 250 ms cubic-bezier(0.4,0,0.2,1)
+        
 }
 .nav-link:hover,
 .nav-link:focus{
@@ -387,8 +394,13 @@ display: flex;
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
-    row-gap: 48px
+    row-gap: 48px;
     
+}
+.portfolio-list:hover{
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.8),
+        0 px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.8)
 }
 .portfolio-item{
     width: calc((100% - 48px) / 3);
@@ -396,10 +408,10 @@ display: flex;
         justify-content: center;
         flex-direction: column;
         gap: 8px;
-        
-       
-    
+        transition:box-shadow 250ms cubic-bezier(0.4,0,0.2,1)
+         position: relative;
 }
+
 .portfolio-title{
     line-height: 1.11
     
@@ -439,9 +451,10 @@ display: flex;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
-        
         width: 100%;
         height: ;
+        top: 0;
+        left: 0
 
 }
 .portfolio-cover-wrapper{
