--- a/css/styles.css
+++ b/css/styles.css
@@ -286,43 +286,47 @@ color: #404bbf;
 }
 
 /*-------TEAM------*/
-.team{
+.team {
     padding: 120px 0;
 }
-.section-title-team{
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #2e2f42;
-        text-transform: capitalize;
-        background-color: #F4F4FD;
-        margin-bottom: 72px;
+
+.section-title-team {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+    background-color: #F4F4FD;
+    margin-bottom: 72px;
 
 }
-.team{
+
+.team {
     background-color: #F4F4FD
 }
 
-.team-subtitle{
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
-        background-color: #FFFFFF;
-        text-align: center;
-        margin-bottom: 8px;
-        
+.team-subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    background-color: #FFFFFF;
+    text-align: center;
+    margin-bottom: 8px;
+
 }
-.team-list{
+
+.team-list {
     display: flex;
-        align-items: center;
-        gap: 24px;
+    align-items: center;
+    gap: 24px;
 }
-.team-item{
+
+.team-item {
     background-color: #FFFFFF;
     width: calc(100%-72px) / 4;
     align-items: center;
@@ -331,59 +335,52 @@ color: #404bbf;
     border-radius: 0 0 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.8),
     0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px rgba(46, 47, 66, 0.8)
+    0px 2px 1px rgba(46, 47, 66, 0.8)
 }
-.card{
+
+.card {
     padding: 32px 0;
 }
-.social-item{
-    display: flex;
-    justify-content: center;
-    gap: 24px;
+
+.team-desc {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    text-align: center;
 }
-.team-icon{
-display: flex;
-    align-items: center;
-    gap: 24px;
-}
-.team-item{
-    display: flex;
-    justify-content: center;
-    gap:24px;
+
+
+
+
+.icons-list{
     width: 40px;
     height: 40px;
 
 }
-
-.social-team-link{
-   display: flex;
+.social-icons-link{
+width: 100%;
+height: 100$;
+background-color: #4d5ae5;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 24px
 }
-.soc-link{
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display:flex;
-    align-items: center;
-    justify-content: center;
 
-}
-.soc-link :hover,
-.soc-link :focus{
+.social-link:hover,
+.social-link:focus{
     background-color: #404bbf;
 }
-.social-icon{
-    fill: #f4f4fd;
-}
-.team-desc{
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #434455;
-        text-align: center;
-}
 
+.social-icons{
+    fill:#f4f4fd;
+    width: 40px;
+        flex-basis: calc((100% - 3 * 24px) / 4);
+        gap: 24;
+}
 /*-------PHOTO-----*/
 .section-title {
     font-weight: 700;
