--- a/css/styles.css
+++ b/css/styles.css
@@ -357,11 +357,13 @@ color: #404bbf;
 .icons-list{
     width: 40px;
     height: 40px;
-
+    display: flex;
+text-align: center;
+    
 }
 .social-icons-link{
 width: 100%;
-height: 100$;
+height: 100%;
 background-color: #4d5ae5;
 border-radius: 50%;
 display: flex;
@@ -377,9 +379,7 @@ gap: 24px
 
 .social-icons{
     fill:#f4f4fd;
-    width: 40px;
-        flex-basis: calc((100% - 3 * 24px) / 4);
-        gap: 24;
+    
 }
 /*-------PHOTO-----*/
 .section-title {
@@ -423,8 +423,9 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.8),
          position: relative;
 }
 
-.portfolio-item:hover{
-
+.portfolio-item
+.portfolio-item:hover .portfolio-box{
+transform: translateY();
 }
 .portfolio-title{
     line-height: 1.11
