--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ p{
     border-bottom: 1px solid #E7E9FC;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.8),
     0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 1px 6px rgba(46, 47, 66, 0.8);
+    0px 1px 6px rgba(46, 47, 66, 0.8);
 
 }
 .header-nav{
@@ -99,9 +99,8 @@ p{
 .footer-logo .logo-part{
     color: #f4f4fd
 }
-.page-header{
-    display: flex;
-}
+
+
 .nav-item{
 font-weight: 500;
     font-size: 16px;
@@ -160,7 +159,7 @@ font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
-        transition: color 250 ms cubic-bezier(0.4, 0, 0.2, 1)
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .contacts-link:hover,
 .contacts-link:focus {
@@ -218,6 +217,7 @@ color: #404bbf;
         min-width: 169px;
         height: 56px;
         text-decoration: none;
+        transition: background-color 250 ms cubic-bezier(0.4,0,0.2,1);
     
 }
 .hero-btn:hover,
@@ -253,16 +253,16 @@ color: #404bbf;
 }
 
 
-.benefit-icon{
+.benefits-card{
     display: flex;
     border: 1px solid #8e8f99;
         border-radius: 4px;
-        width: 264px;
         height: 112px;
         background: #f4f4fd;
         display: flex;
-        align-items: centre;
+        align-items: center;
         justify-content: center;
+        margin-bottom: 8px;
 }
     .benefit-item{
         
@@ -288,6 +288,7 @@ color: #404bbf;
 /*-------TEAM------*/
 .team {
     padding: 120px 0;
+
 }
 
 .section-title-team {
@@ -324,6 +325,7 @@ color: #404bbf;
     display: flex;
     align-items: center;
     gap: 24px;
+
 }
 
 .team-item {
@@ -333,9 +335,9 @@ color: #404bbf;
     justify-content: center;
     flex-direction: column;
     border-radius: 0 0 4px 4px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.8),
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.8)
+    0px 2px 1px rgba(46, 47, 66, 0.08)
 }
 
 .card {
