--- a/css/styles.css
+++ b/css/styles.css
@@ -351,6 +351,12 @@ color: #404bbf;
     letter-spacing: 0.02em;
     color: #434455;
     text-align: center;
+    margin-bottom: 8px;
+}
+.social{
+    display: flex;
+    gap: 24px;
+    justify-content: center;
 }
 
 
@@ -371,11 +377,11 @@ border-radius: 50%;
 display: flex;
 align-items: center;
 justify-content: center;
-gap: 24px
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover,
-.social-link:focus{
+.social-icons-link:hover,
+.social-icons-list:focus{
     background-color: #404bbf;
 }
 
@@ -410,10 +416,10 @@ gap: 24px
     row-gap: 48px;
     
 }
-.portfolio-list:hover{
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.8),
-        0 px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.8)
+.portfolio-item:hover{
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08)
 }
 .portfolio-item{
     width: calc((100% - 48px) / 3);
@@ -423,11 +429,12 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.8),
         gap: 8px;
         transition: box-shadow 250ms cubic-bezier(0.4,0,0.2,1);
          position: relative;
+
 }
 
-.portfolio-item
-.portfolio-item:hover .portfolio-box{
-transform: translateY();
+
+.portfolio-item:hover .portfolio-cover-text{
+transform: translateY(0%);
 }
 .portfolio-title{
     line-height: 1.11
@@ -534,6 +541,7 @@ transform: translateY();
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-soc-link:hover,
 .footer-soc-link:focus{
