--- a/css/styles.css
+++ b/css/styles.css
@@ -640,6 +640,9 @@ background-color: #31d0aa;
 .close-icon{
     fill:#2E2F42
 }
+.icon-close:hover{
+    background-color: #404BBF;
+}
 .modal-title{
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -656,6 +659,11 @@ background-color: #31d0aa;
 }
 .modal-field{
     margin-bottom: 8px;
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
 }
 
 .modal-input{
@@ -699,12 +707,101 @@ background-color: #31d0aa;
 .modal-textarea{
     resize: none;
     width: 100%;
-    height: 336px;
+    height: 137px;
     border: 1px solid rgba(17, 17, 17, 0.05);
         border-radius: 4px;
         outline: transparent;
         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+        
 }
 .modal-textarea::placeholder{
+font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.modal-check-text{
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        display flex;
+        align-items: center;
+        
+}
+..modal-check-text span{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        fill: transparent;
+        border-radius: 2px;
+            border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+
+
+.subscribe{
+
+    width: 453px;
+    height: 80px;
+    margin-left: 80px;
+    
+}
+.subscribe-title{
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+        font-family: "Roboto", sans-serif;
+        margin-bottom: 16px;
 
 }
+.footer-form{
+
+    display: inline-block;
+    
+        
+    
+}
+
+.footer-input{
+        border: 1px solid #fff;
+        border-radius: 4px;
+        width: 264px;
+        height: 40px;
+        background-color: transparent;
+        
+      
+        
+       
+
+}
+.footer-btn{
+border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+    background: #4d5ae5;
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        text-align: center;
+        color: #fff;
+        border: none
+}
+
+.subscribe-icon{
+    fill: #f4f4fd
+}
+
+
+
+
+
+
